# termbar

./: .gitignore  CMakeLists.txt
examples/: 01_download.cpp  02_thread_worker.cpp  03_multi_stage.cpp
include/: termbar.h
src/: bindings.cpp  termbar.cpp
test_package/: CMakeLists.txt  main.cpp
